# search-engine

./: CMakeLists.txt  Crawler.cpp  Request.cpp
Crawler/Page/: Page.cpp  Page.hpp
Crawler/PageLoader/: Makefile  PageLoader.cpp
Crawler/Parser/: HTML_Parse.cpp  HTML_Parse.hpp
DBConnector/: CMakeLists.txt  DBConnector.cpp  DBConnector.hpp
DataStore/: CMakeLists.txt  Data.cpp  Data.hpp  DataStore.cpp  DataStore.hpp
LinkStore/: CMakeLists.txt  Link.cpp  Link.hpp  LinkStatus.hpp  LinkStore.cpp  LinkStore.hpp
PageLoader/: CMakeLists.txt  Page.cpp  Page.hpp  PageLoader.cpp  PageLoader.hpp
Parser/: CMakeLists.txt  HTML_Parse.cpp
SpellCorrector/: SpellCorrector.cpp  SpellCorrector.hpp
WebsiteStore/: CMakeLists.txt  Website.cpp  Website.hpp  WebsiteStore.cpp  WebsiteStore.hpp
